--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-TestGlx.xcodeproj/project.xcworkspace/
+Teemo.xcodeproj/project.xcworkspace/
 
-TestGlx.xcodeproj/xcuserdata/
+Teemo.xcodeproj/xcuserdata/
 
 .DS_Store
